--- a/IOT_API/appsettings.json
+++ b/IOT_API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=iot;Username=giang;Password=Giang290998@"
+  }
 }
