--- a/IOT_API/.env
+++ b/IOT_API/.env
@@ -1,4 +1,4 @@
-HOST=127.0.0.1
+HOST=192.168.1.123
 PORT=5432
 DATABASE=iot
 USERNAME=postgres
@@ -7,7 +7,7 @@ JWT_AT_KEY=thisismyfuckingsecretkeyjwt
 JWT_RT_KEY=doanthihonghanh06042001
 JWT_PT_KEY=nguyenhoanggiang290998
 TWILIO_ACCOUNT_SID=ACe3e3713bc09335e1daa84db92f32c388
-TWILIO_AUTH_TOKEN=bdae0845e41db6406ee8f030ad6aae68
+TWILIO_AUTH_TOKEN=83727f72541452523fcc8aa2498bf60d
 TWILIO_PHONE=+14849292281
 
 CASSANDRA_HOST=192.168.1.123
@@ -17,4 +17,5 @@ CASSANDRA_KEYSPACE=statistic
 
 IOT_CLIENT=http://localhost:3000
 
+MQTT_HOST=192.168.1.123
 MQTT_PORT=1883
