--- a/IOT_API/.env
+++ b/IOT_API/.env
@@ -11,6 +11,7 @@ TWILIO_AUTH_TOKEN=83727f72541452523fcc8aa2498bf60d
 TWILIO_PHONE=+14849292281
 
 CASSANDRA_HOST=192.168.1.123
+CASSANDRA_PORT=9042
 CASSANDRA_USERNAME=giang
 CASSANDRA_PASSWORD=Giang290998@
 CASSANDRA_KEYSPACE=statistic
