--- a/IOT_API/.env
+++ b/IOT_API/.env
@@ -1,4 +1,4 @@
-HOST=192.168.1.123
+HOST=datn.site
 PORT=5432
 DATABASE=iot
 USERNAME=postgres
@@ -10,7 +10,7 @@ TWILIO_ACCOUNT_SID=ACe3e3713bc09335e1daa84db92f32c388
 TWILIO_AUTH_TOKEN=83727f72541452523fcc8aa2498bf60d
 TWILIO_PHONE=+14849292281
 
-CASSANDRA_HOST=192.168.1.123
+CASSANDRA_HOST=datn.site
 CASSANDRA_PORT=9042
 CASSANDRA_USERNAME=giang
 CASSANDRA_PASSWORD=Giang290998@
@@ -18,5 +18,5 @@ CASSANDRA_KEYSPACE=statistic
 
 IOT_CLIENT=http://localhost:3000
 
-MQTT_HOST=192.168.1.123
+MQTT_HOST=datn.site
 MQTT_PORT=1883
