--- a/IOT_API/.env
+++ b/IOT_API/.env
@@ -1,4 +1,4 @@
-HOST=datn.site
+HOST=doanthihonghanh2001.ddns.net
 PORT=5432
 DATABASE=iot
 USERNAME=postgres
@@ -10,13 +10,12 @@ TWILIO_ACCOUNT_SID=ACe3e3713bc09335e1daa84db92f32c388
 TWILIO_AUTH_TOKEN=83727f72541452523fcc8aa2498bf60d
 TWILIO_PHONE=+14849292281
 
-CASSANDRA_HOST=datn.site
-CASSANDRA_PORT=9042
+CASSANDRA_HOST=doanthihonghanh2001.ddns.net
 CASSANDRA_USERNAME=giang
 CASSANDRA_PASSWORD=Giang290998@
 CASSANDRA_KEYSPACE=statistic
 
-IOT_CLIENT=http://localhost:3000
+IOT_CLIENT=http://doanthihonghanh2001.ddns.net
 
-MQTT_HOST=datn.site
+MQTT_HOST=doanthihonghanh2001.ddns.net
 MQTT_PORT=1883
